[package]
name = "wdqsbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql_async = "*"
tokio = { version = "1", features = ["full"] }
futures = "*"
clap = "*"
bzip2 = "*"
flate2 = "*"
nom = "*"
percent-encoding = "*"
