[package]
name = "wdqsbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql_async = "*"
tokio = { version = "1", features = ["full"] }
futures = "*"
clap = "*"
bzip2 = "*"
flate2 = "*"
nom = "*"
percent-encoding = "*"
async-trait = "*"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"
#rustflags = ["-C target-cpu=native"]
